--- a/src/pages/SignupPage/SignupPage.css
+++ b/src/pages/SignupPage/SignupPage.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: column;
     gap: 22px;
+    width: 79%;
 }
 
 .signup-form input {
